# deepdrone

./: .gitignore  AGENTS.md  README.md  README_ZH.md  ToDoList.md  WEB_INTERFACE.md  pyproject.toml  requirements.txt  start_web.py  web_api.py
bridge/: __init__.py  adaptive_planner.py  bridge_knowledge.py  damage_detector.py  inspection_logger.py
drone/: cli.py  config.py  drone_chat_interface.py  drone_control.py  drone_tools.py  interactive_setup.py  llm_interface.py  terminal_chat.py
frontend/: PERFORMANCE_OPTIMIZATIONS.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.css  index.js
frontend/src/components/: ErrorBoundary.js  Layout.js  LazyImage.js  LoadingSpinner.js  Navigation.js  StatusCard.js  VirtualList.js
frontend/src/context/: AppContext.js
frontend/src/hooks/: usePerformance.js  useWebSocket.js
frontend/src/pages/: ControlPage.js  DashboardPage.js  SettingsPage.js
frontend/src/services/: apiService.js  websocketService.js
frontend/src/styles/: design-system.css  performance.css  reset.css
frontend/src/utils/: buildOptimizations.js  performance.js  serviceWorker.js
misc/: drone_chat.py
